DAR-826: fix background flicker for small screens.

--- a/skins/oasis/css/core/responsive.scss
+++ b/skins/oasis/css/core/responsive.scss
@@ -308,6 +308,11 @@ body > .global-notification,
 @media screen and (max-width: $width-outside) {
 	body {
 		background: $color-page;
+
+		&:after,
+		&:before {
+			display: none;
+		}
 	}
 
 	.WikiHeader .WikiNav {
